# Cplus-SFML-GAME

./: CMakeLists.txt  README.md
src/core/: CMakeLists.txt  Game.cpp  Game.h  Global.h  Map.cpp  Map.h  Role.cpp  Role.h  mapManager.cpp  mapManager.h  myMain.cpp
src/main/: CMakeLists.txt
src/test/: CMakeLists.txt  unitTests.cpp
